Fix entry buttons on mobile

--- a/client/src/components/Dashboard/EntryLog/EntryLog.module.scss
+++ b/client/src/components/Dashboard/EntryLog/EntryLog.module.scss
@@ -90,22 +90,21 @@
 
   .buttonContainer {
     position: absolute;
-    visibility: hidden;
-    right: 8px;
-
-    // Vertically center in entryrow
-    top: 50%;
-    transform: translateY(-50%);
+    display: none;
+    right: 0px;
 
     button {
-      margin: 0px 2px;
-      padding: 1px 4px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 26px;
+      width: 52px;
 
       background: white;
       border: none;
       outline: none;
-      border-radius: 4px;
       .icon {
+        text-align: center;
         width: 14px;
         height: 14px;
       }
@@ -114,28 +113,22 @@
       }
     }
     .editButton {
+      border-right: 1px solid rgba(25, 4, 69, 0.3);
+      border-left: 1px solid rgba(25, 4, 69, 0.3);
       .icon {
-        color: rgba(0, 0, 0, 0.54);
-      }
-      &:hover {
-        .icon {
-          color: rgba(0, 0, 0, 0.65);
-        }
+        color: rgba(0, 0, 0, 0.65);
       }
     }
     .deleteButton {
+      border-radius: 0px 8px 8px 0px;
       .icon {
-        color: rgba(226, 19, 19, 0.54);
-      }
-      &:hover {
-        .icon {
-          color: rgba(226, 19, 19, 0.65);
-        }
+        color: rgba(226, 19, 19, 0.65);
       }
     }
   }
-  &:hover .buttonContainer {
-    visibility: visible;
+  &:hover .buttonContainer,
+  &:active .buttonContainer {
+    display: flex;
   }
 }
 
@@ -174,6 +167,47 @@
     }
     &::-webkit-scrollbar-thumb:hover {
       box-shadow: inset 0 0 10px 10px rgba(0, 0, 0, 0.2);
+    }
+  }
+
+  .entryRow {
+    .buttonContainer {
+      right: 4px;
+
+      // Vertically center in entryrow
+      top: 50%;
+      transform: translateY(-50%);
+
+      button {
+        margin: 0px 2px;
+        &:hover {
+          cursor: pointer;
+        }
+      }
+      .editButton {
+        border-radius: 4px;
+        border: none;
+        .icon {
+          color: rgba(0, 0, 0, 0.54);
+        }
+        &:hover {
+          .icon {
+            color: rgba(0, 0, 0, 0.65);
+          }
+        }
+      }
+      .deleteButton {
+        border-radius: 4px;
+        border: none;
+        .icon {
+          color: rgba(226, 19, 19, 0.54);
+        }
+        &:hover {
+          .icon {
+            color: rgba(226, 19, 19, 0.65);
+          }
+        }
+      }
     }
   }
 }
