--- a/client/src/components/Modal/EntryModal.module.scss
+++ b/client/src/components/Modal/EntryModal.module.scss
@@ -21,6 +21,7 @@
     border: none;
     outline: none;
     border: 1px solid rgba(25, 4, 69, 0.1);
+    background-color: white;
     border-radius: 8px;
 
     &:hover {
